cambio general en diseño y funcionalidad

--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="stylesheet" href="./CSS/main.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
     <div class="calculadora">
-        <div class="pantalla">0</div>
-        <button id="c"class="btn">C</button>
-        <button id="borrar" class="btn">←</button>
-        <button class="btn">/</button>
-        <button class="btn">*</button>
-        <button class="btn">7</button>
-        <button class="btn">8</button>
-        <button class="btn">9</button>
-        <button class="btn">-</button>
-        <button class="btn">4</button>
-        <button class="btn">5</button>
-        <button class="btn">6</button>
-        <button class="btn">+</button>
-        <button class="btn">1</button>
-        <button class="btn">2</button>
-        <button class="btn">3</button>
-        <button id="igual" class="btn">=</button>
-        <button id="cero" class="btn">0</button>
-        <button class="btn">.</button>
+        <div id="pantalla">
+            <div class="fila1">0</div>
+            <div class="fila2">0</div>
+        </div>
+        <button id="c"class="btn"><i>C</i></button>
+        <button id="borrar" class="btn"><i>←</i></button>
+        <button id="operacion" class="btn"><i>/</i></button>
+        <button id="operacion" class="btn"><i>*</i></button>
+        <button class="btn"><i>7</i></button>
+        <button class="btn"><i>8</i></button>
+        <button class="btn"><i>9</i></button>
+        <button id="operacion" class="btn"><i>-</i></button>
+        <button class="btn"><i>4</i></button>
+        <button class="btn"><i>5</i></button>
+        <button class="btn"><i>6</i></button>
+        <button id="operacion" class="btn"><i>+</i></button>
+        <button class="btn"><i>1</i></button>
+        <button class="btn"><i>2</i></button>
+        <button class="btn"><i>3</i></button>
+        <button id="igual" class="btn"><i>=</i></button>
+        <button id="cero" class="btn"><i>0</i></button>
+        <button class="btn"><i>.</i></button>
     </div>
     <script src="./js/main.js"></script>
 </body>
